Fixed the drop down state being 'stuck' if you were to cancel out of an alert. Made slight change to menu's current, switched to a notch instead of just bg color.

--- a/data/css/superfish.css
+++ b/data/css/superfish.css
@@ -64,10 +64,6 @@ ul.sf-menu li li li.sfHover ul {
     top:			0;
 }
 
-.sf-menu li.current {
-    background-color: #000;
-}
-
 .sf-menu {
     float:			left;
     /*margin-bottom:	1em;*/
